# hs-hereis

./: README.md  hs-hereis.cabal
app/: Main.hs
src/: CmdOptions.hs  Hereis.hs  Lib.hs  Main.hs
src/Control/: Hereis.hs  HereisAdd.hs  HereisCd.hs
src/Data/: Hereis.hs
src/Data/Hereis/: Add.hs  Main.hs
src/Hereis/: Add.hs  Main.hs
test/: DocTest.hs  Spec.hs
